--- a/index.html
+++ b/index.html
@@ -4,26 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Duarte Team - Taekwondo</title>
+    <title>Duarte Team - Taekwon-do I.T.F.</title>
+    <link rel="stylesheet" href="styles.css">
+
 </head>
 
 <body>
     <header id="inicio">
         <!-- Define el encabezado de una página o sección -->
-        <h1>Duarte Team - Taekwondo</h1>
+        <h1>Duarte Team - Taekwon-do I.T.F.</h1>
         <img src="imagenes/logoClase2A.webp"  alt="Mi Logo" width="60" height="60">
         <img src="imagenes/logoClase2d.png"  alt="Mi Logo" width="60" height="60">
-        <p>Centro Profesional de Taekwondo, línea del Master Leiva (VIII Dan)</p>
+        <p>Centro Profesional de Taekwon-do, Director Master Leiva (VIII Dan)</p>
     </header>
 
-    <nav>
-        <!-- Sección de navegación con enlaces -->
-        <ul>
-            <li><a href="#clases">Clases</a></li>
-            <li><a href="#sobre-nosotros">Sobre Nosotros</a></li>
-            <li><a href="#contacto">Contacto</a></li>
-        </ul>
-    </nav>
+<nav>
+    <!-- Sección de navegación con enlaces -->
+    <ul class="nav-list">
+        <li><a href="#clases">Clases</a></li>
+        <li><a href="#sobre-nosotros">Sobre Nosotros</a></li>
+        <li><a href="#contacto">Contacto</a></li>
+    </ul>
+</nav>
 
     <main>
         <section id="video-taekwondo">
