Cambios en el CSS

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header id="inicio">
         <!-- Define el encabezado de una página o sección -->
         <h1>Duarte Team - Taekwon-do I.T.F.</h1>
-        <img src="imagenes/logoClase2A.webp"  alt="Mi Logo" width="60" height="60">
         <img src="imagenes/logoClase2d.png"  alt="Mi Logo" width="60" height="60">
+        <img src="imagenes/logo_duarteteam.png"  alt="Mi Logo" width="65" height="65">
         <p>Centro Profesional de Taekwon-do, Director Master Leiva (VIII Dan)</p>
     </header>
 
@@ -26,6 +26,15 @@
         <li><a href="#contacto">Contacto</a></li>
     </ul>
 </nav>
+    <section class="galeria">
+        <h2>Galería de Imágenes</h2>
+        <div class="contenedor-imagenes">
+            <img src="imagenes/imagen1Web.jpg" alt="Entrenamiento 1">
+            <img src="imagenes/imagen3.jpg" alt="Competencia del equipo">
+            <img src="imagenes/imagen5.jpg" alt="Examen de cinturones">
+            <img src="imagenes/imagen7.jpg" alt="Foto grupal">
+        </div>
+    </section>
 
     <main>
         <section id="video-taekwondo">
