Actualización del sitio

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <p> <strong>WhatsApp</strong>: <a href="https://wa.me/" target="_blank" rel="noopener noreferrer">Escribinos
                 aquí</a></p>
     
-        <h3>Escribinos desde aquí:</h3>
+        <h3>Realizá tu consulta, que pronto me comunicaré contigo:</h3>
         <form action="https://formspree.io/f/xjkypbea" method="POST">
             <label for="nombre">Nombre:</label><br>
             <input type="text" id="nombre" name="nombre" placeholder="Tu nombre" required><br><br>
