--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
     <!-- Sección de navegación con enlaces -->
     <ul class="nav-list">
         <li><a href="#sobre-nosotros">Sobre Nosotros</a></li>
-        <li><a href="#dojang">Dojang</a></li>
+        <li><a href="#dojang" class="active">Dojang</a></li>
         <li><a href="#nuestras-clases">Nuestras Clases</a></li>
         <li><a href="#contacto">Contacto</a></li>
     </ul>
 </nav>
+
   <main>
        <section id="sobre-nosotros" class="section">
             <h2>Sobre Nosotros</h2>
