--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Duarte Team - Taekwon-do I.T.F.</title>
+    <title>Duarte Team - Taekwondo I.T.F.</title>
     <!-- Acá va Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     
@@ -16,8 +16,10 @@
     <header id="inicio">
         <!-- Define el encabezado de una página o sección -->
         <h1>Duarte Team - Taekwon-do I.T.F.</h1>
+        <img src="imagenes/ITF_Logo_New.png" alt="Mi Logo" width="50" height="25">
         <img src="imagenes/logoClase2d.png"  alt="Mi Logo" width="60" height="60">
-        <img src="imagenes/logo_duarteteam.png"  alt="Mi Logo" width="65" height="65">
+        <img src="imagenes/FATI.png" alt="Mi Logo" width="50" height="25">
+        
         <p>Centro Profesional de Taekwon-do, Director Master Leiva (VIII Dan)</p>
     </header>
 <nav>
@@ -84,7 +86,7 @@
         </section>
         <section id="galeria" class="galeria">
             <h2>En acción</h2>
-            <p>Entrenamientos, torneos, cursos y más:</p>
+            <p>Entrenamientos, torneos, cursos:</p>
             <a href="galeria.html" class="boton-galeria">Ver más</a>
         </section>
 
