realizando mejoras antes de la entrega

--- a/galeria.html
+++ b/galeria.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galería - Duarte Team</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <!-- Google Fonts: Bebas Neue -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Anton&family=Bebas+Neue&family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
+        rel="stylesheet">
+
     <link rel="stylesheet" href="css/styles.css"> <!-- Usamos el mismo -->
 </head>
 
@@ -13,7 +20,7 @@
 <body>
 
     <header id="inicio">
-        <h1>Duarte Team - Galería de Fotos</h1>
+        <h1>DUARTE TEAM - Galería de Fotos</h1>
         <a href="index.html">← Volver al Inicio</a>
         </header>
         <nav>
@@ -27,7 +34,7 @@
             </ul> 
          </nav>
     <section class="galeria">
-        <h2>Galería de Imágenes</h2>
+        <h2>GALERÍA DE IMÁGENES</h2>
         <div class="contenedor-imagenes">
             <a href="images/imagen3.jpg" target="_blank">
               <img src="images/imagen3.jpg" alt="Competencia del equipo">
