--- a/about.html
+++ b/about.html
@@ -5,13 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre Nosotros - Duarte Team</title>
+    <!-- Google Fonts: Bebas Neue -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Anton&family=Bebas+Neue&family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
+        rel="stylesheet">
+
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
 
     <header id="inicio">
-        <h1>Sobre Nosotros</h1>
+        <h1>SOBRE NOSOTROS</h1>
         </header>
     <nav>
         <ul class="nav-list">
