realizando mejoras antes de la entrega

--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Anton&family=Bebas+Neue&family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
         rel="stylesheet">
+        <!-- Iconos Font Awesome -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -63,16 +66,14 @@
                     <i class="fab fa-instagram"></i>
                 </a>
             </li>
-            <li>
-                Chatea directo con DuarteTeam Instructor.
-                <a href="https://wa.me/message/H5LF4KJLEY67E1" target="_blank">
-                    <i class="fab fa-whatsapp"></i>
-                </a>
-            </li>
+    
             <li><a href="index.html">Volver al inicio</a></li>
         </ul>
-        </footer>
-   
+    </footer>
+    <a href="https://wa.me/message/H5LF4KJLEY67E1" class="whatsapp-fixed" target="_blank" title="Chatear por WhatsApp">
+        <i class="fab fa-whatsapp"></i>
+    </a>
+          
 
 </body>
 
