--- a/galeria.html
+++ b/galeria.html
@@ -87,15 +87,14 @@
                     <i class="fab fa-instagram"></i>
                 </a>
             </li>
-            <li>
-                Chatea directo con DuarteTeam Instructor.
-                <a href="https://wa.me/message/H5LF4KJLEY67E1" target="_blank">
-                    <i class="fab fa-whatsapp"></i>
-                </a>
-            </li>
+           
             <li><a href="index.html">Volver al inicio</a></li>
         </ul>
         </footer>
+        <a href="https://wa.me/message/H5LF4KJLEY67E1" class="whatsapp-fixed" target="_blank" title="Chatear por WhatsApp">
+            <i class="fab fa-whatsapp"></i>
+        </a>
+          
 </body>
 
 </html>
