Cambios antes de la pre-entrega

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta name="description"
         content="Conocé más sobre la escuela Duarte Team y nuestros valores en la enseñanza del Taekwon-Do ITF.">
 
-    <!-- Google Fonts: Bebas Neue -->
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <!-- Encabezado unificado como en index -->
+    <!-- Encabezado -->
     <header id="inicio" class="encabezado-principal">
         <div class="encabezado-titulo">
             <h1>Duarte Team</h1>
@@ -32,17 +32,17 @@
         </div>
 
         <div class="encabezado-logos">
-            <img src="images/ITF_Logo_New.png" alt="Logo de la Federación ITF" />
+            <img src="images/ITF_Logo_New.png" alt="Logo de la Federación Internacional de Taekwon-Do ITF" />
             <img src="images/logoClase2d.png" alt="Logo del equipo Duarte Team" />
-            <img src="images/FATI.png" alt="Logo de la Federación Argentina de Taekwon-Do ITF" />
+            <img src="images/FATI.png" alt="Logo de la Federación Argentina de Taekwon-Do ITF (FATI)" />
         </div>
     </header>
 
-    <!-- Navegación con el orden actualizado -->
+    <!-- Navegación -->
     <nav>
         <ul class="nav-list">
             <li><a href="index.html">Inicio</a></li>
-            <li><a href="about.html">Sobre Nosotros</a></li>
+            <li><a href="about.html" aria-current="page">Sobre Nosotros</a></li>
             <li><a href="index.html#nuestras-sedes">Sedes</a></li>
             <li><a href="index.html#mapa-sedes">Mapa</a></li>
             <li><a href="index.html#fetra-taekwondo">Federación</a></li>
@@ -51,33 +51,48 @@
         </ul>
     </nav>
 
-    <!-- Contenido principal -->
-    <main class="section">
-        <h2 class="titulo-seccion">¿Quiénes somos?</h2>
-        <p>Somos parte del <strong>Centro Profesional de Taekwon-do</strong>, bajo la dirección del Maestro Roberto
-            Leiva (VIII Dan).
-            Nuestro objetivo es transmitir los valores del Taekwon-do: <em>cortesía, integridad, perseverancia,
-                autocontrol y espíritu indomable</em>.</p>
+<!-- Contenido principal -->
+<main class="section">
+    <h2 class="titulo-seccion">¿Quiénes somos?</h2>
+    <p>
+        Somos parte del <strong>Centro Profesional de Taekwon-do</strong>, bajo la dirección del Maestro Roberto
+        Leiva (VIII Dan). Nuestro objetivo es transmitir los valores del Taekwon-do:
+        <em>cortesía, integridad, perseverancia, autocontrol y espíritu indomable</em>.
+    </p>
+    <p>
+        Entrená con el Duarte Team y desarrollá <strong>disciplina, confianza y fuerza</strong> en un ambiente de
+        respeto, contención y crecimiento personal.
+    </p>
 
-        <p>Entrená con el Duarte Team y desarrollá <strong>disciplina, confianza y fuerza</strong>, en un ambiente de
-            respeto, contención y crecimiento personal.</p>
-    </main>
+    <div class="perfil-instructor">
+        <img src="images/_JPD5718.jpg" alt="Instructor Darío Duarte" class="foto-instructor" />
+        <div class="bio-instructor">
+            <h3>Instructor Darío Duarte</h3>
+            <p>2° Dan ITF - Excompetidor del Club Estudiantes de La Plata</p>
+            <p>Instructor del Duarte Team, escuela afiliada al Centro Profesional de Taekwon-do, dirigida por el Maestro
+                Roberto Leiva (VIII Dan).</p>
+        </div>
+    </div>
+</main>
 
-    <!-- Footer -->
+    <!-- Pie de página -->
     <footer>
         <ul class="footer-list">
             <li>© 2025 Duarte Team - Todos los derechos reservados.</li>
             <li>
-                Síguenos en
-                <a href="https://www.facebook.com/duarteTeam/" target="_blank"><i class="fab fa-facebook"></i></a>
-                <a href="https://www.instagram.com/darioduartetkd/" target="_blank"><i class="fab fa-instagram"></i></a>
+                Seguinos en
+                <a href="https://www.facebook.com/duarteTeam/" target="_blank" rel="noopener noreferrer"><i
+                        class="fab fa-facebook"></i></a>
+                <a href="https://www.instagram.com/darioduartetkd/" target="_blank" rel="noopener noreferrer"><i
+                        class="fab fa-instagram"></i></a>
             </li>
             <li><a href="index.html">Volver al inicio</a></li>
         </ul>
     </footer>
 
     <!-- Botón flotante de WhatsApp -->
-    <a href="https://wa.me/message/H5LF4KJLEY67E1" class="whatsapp-fixed" target="_blank" title="Chatear por WhatsApp">
+    <a href="https://wa.me/message/H5LF4KJLEY67E1" class="whatsapp-fixed" target="_blank" title="Chatear por WhatsApp"
+        rel="noopener noreferrer">
         <i class="fab fa-whatsapp"></i>
     </a>
 </body>
