--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
         <p><strong>WhatsApp:</strong> <a href="https://wa.me/message/H5LF4KJLEY67E1" target="_blank">Escribinos aquí</a>
         </p>
 
-        <h3>Realizá tu consulta:</h3>
+        <h3 class="formulario-titulo">Realizá tu consulta:</h3>
         <form action="https://formspree.io/f/xjkypbea" method="POST">
             <label for="nombre">Nombre:</label><br />
             <input type="text" id="nombre" name="nombre" placeholder="Tu nombre" required /><br /><br />
