Cambios antes de la pre-entrega

--- a/about.html
+++ b/about.html
@@ -65,10 +65,10 @@
     </p>
 
     <div class="perfil-instructor">
-        <img src="images/_JPD5718.jpg" alt="Instructor Darío Duarte" class="foto-instructor" />
+        <img src="images/duarte.jpg" alt="Instructor Darío Duarte" class="foto-instructor" />
         <div class="bio-instructor">
-            <h3>Instructor Darío Duarte</h3>
-            <p>2° Dan ITF - Excompetidor del Club Estudiantes de La Plata</p>
+            <h2>Instructor Darío Duarte</h2>
+            <p>2° Dan ITF - Excompetidor Club EDELP</p>
             <p>Instructor del Duarte Team, escuela afiliada al Centro Profesional de Taekwon-do, dirigida por el Maestro
                 Roberto Leiva (VIII Dan).</p>
         </div>
