Cambios antes de la pre-entrega

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
         <div class="hero-contenido">
             <h2 class="hero-titulo">TAEKWON-DO I.T.F. EN LA PLATA</h2>
             <p class="hero-subtitulo">Disciplina, respeto y fuerza interior con el Duarte Team</p>
-            <a href="images/_JPD5718.jpg" class="boton-galeria">Conocé nuestra escuela</a>
+            <a href="nuestra-escuela.html" class="boton-galeria">Conocé nuestra escuela</a>
+
         </div>
     </section>
       
