Cambios antes de la pre-entrega

--- a/nuestra-escuela.html
+++ b/nuestra-escuela.html
@@ -30,7 +30,18 @@
         <h1>Conocé nuestra escuela</h1>
         <p>Entrenamos en Club Alberti y Gimnasio Energía - La Plata</p>
     </header>
-
+<!-- Navegación -->
+<nav>
+    <ul class="nav-list">
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="about.html" aria-current="page">Sobre Nosotros</a></li>
+        <li><a href="index.html#nuestras-sedes">Sedes</a></li>
+        <li><a href="index.html#mapa-sedes">Mapa</a></li>
+        <li><a href="index.html#fetra-taekwondo">Federación</a></li>
+        <li><a href="contact.html">Contacto</a></li>
+        <li><a href="galeria.html">Galería</a></li>
+    </ul>
+</nav>
     <main class="galeria">
         <div class="galeria-contenedor">
             <img src="images/alberti1.jpg" alt="Clase en Club Alberti">
