Cambios antes de la pre-entrega

--- a/nuestra-escuela.html
+++ b/nuestra-escuela.html
@@ -26,10 +26,25 @@
 </head>
 
 <body>
-    <header>
-        <h1>Conocé nuestra escuela</h1>
-        <p>Entrenamos en Club Alberti y Gimnasio Energía - La Plata</p>
+    <header id="inicio" class="encabezado-principal">
+        <div class="encabezado-titulo">
+            <h1>Duarte Team</h1>
+            <p class="subtitulo">Centro Profesional de Taekwon-Do</p>
+        </div>
+        <div class="encabezado-logos">
+            <img src="images/ITF_Logo_New.png" alt="Logo ITF">
+            <img src="images/logoClase2d.png" alt="Logo Duarte Team">
+            <img src="images/FATI.png" alt="Logo FATI">
+        </div>
     </header>
+    
+    <!-- Subtítulo específico para la galería -->
+    <section class="galeria-subtitulo">
+        <h2>Conocé nuestra escuela</h2>
+        <p>Entrenamos en Club Alberti y Gimnasio Energía - La Plata</p>
+    </section>
+    <!-- <h1>Conocé nuestra escuela</h1>
+        <p>Entrenamos en Club Alberti y Gimnasio Energía - La Plata</p> -->
 <!-- Navegación -->
 <nav>
     <ul class="nav-list">
