--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         href="https://fonts.googleapis.com/css2?family=Anton&family=Bebas+Neue&family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
         rel="stylesheet" />
 
-    <!-- Iconos Font Awesome -->
+    <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
     <!-- CSS Principal -->
@@ -28,7 +28,7 @@
     <header id="inicio" class="encabezado-principal">
         <div class="encabezado-titulo">
             <h1>Duarte Team</h1>
-            <p class="subtitulo">Centro Profesional de Taekwon-do</p>
+            <p class="subtitulo">Centro Profesional de Taekwon-Do</p>
         </div>
 
         <div class="encabezado-logos">
@@ -51,29 +51,29 @@
         </ul>
     </nav>
 
-<!-- Contenido principal -->
-<main class="section">
-    <h2 class="titulo-seccion">¿Quiénes somos?</h2>
-    <p>
-        Somos parte del <strong>Centro Profesional de Taekwon-do</strong>, bajo la dirección del Maestro Roberto
-        Leiva (VIII Dan). Nuestro objetivo es transmitir los valores del Taekwon-do:
-        <em>cortesía, integridad, perseverancia, autocontrol y espíritu indomable</em>.
-    </p>
-    <p>
-        Entrená con el Duarte Team y desarrollá <strong>disciplina, confianza y fuerza</strong> en un ambiente de
-        respeto, contención y crecimiento personal.
-    </p>
+    <!-- Contenido principal -->
+    <main class="section">
+        <h2 class="titulo-seccion">¿Quiénes somos?</h2>
+        <p>
+            Somos parte del <strong>Centro Profesional de Taekwon-Do</strong>, bajo la dirección del Maestro Roberto
+            Leiva (VIII Dan). Nuestro objetivo es transmitir los valores del Taekwon-Do:
+            <em>cortesía, integridad, perseverancia, autocontrol y espíritu indomable</em>.
+        </p>
+        <p>
+            Entrená con el Duarte Team y desarrollá <strong>disciplina, confianza y fuerza</strong> en un ambiente de
+            respeto, contención y crecimiento personal.
+        </p>
 
-    <div class="perfil-instructor">
-        <img src="images/duarte.jpg" alt="Instructor Darío Duarte" class="foto-instructor" />
-        <div class="bio-instructor">
-            <h2>Instructor Darío Duarte</h2>
-            <p>2° Dan ITF - Excompetidor Club EDELP</p>
-            <p>Instructor del Duarte Team, escuela afiliada al Centro Profesional de Taekwon-do, dirigida por el Maestro
-                Roberto Leiva (VIII Dan).</p>
+        <div class="perfil-instructor">
+            <img src="images/duarte.jpg" alt="Instructor Darío Duarte" class="foto-instructor" />
+            <div class="bio-instructor">
+                <h2>Instructor Darío Duarte</h2>
+                <p>2° Dan ITF - Excompetidor del Club Estudiantes de La Plata (EDELP)</p>
+                <p>Instructor del Duarte Team, escuela afiliada al Centro Profesional de Taekwon-Do, dirigida por el
+                    Maestro Roberto Leiva (VIII Dan).</p>
+            </div>
         </div>
-    </div>
-</main>
+    </main>
 
     <!-- Pie de página -->
     <footer>
