--- a/galeria.html
+++ b/galeria.html
@@ -2,43 +2,46 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nuestra Escuela de Taekwondo en La Plata | Duarte Team en Club Alberti y Gimnasio Energía</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Latir del Taekwondo</title>
     <meta name="description"
-        content="Explorá en imágenes nuestras clases de Taekwondo en Club Alberti y Gimnasio Energía con el Duarte Team en La Plata.">
+        content="Conocé nuestra escuela de Taekwondo en La Plata. Entrenamos en Club Alberti y Gimnasio Energía con el Duarte Team.">
 
-    <!-- Google Fonts -->
+    <!-- Google Fonts: Bebas Neue -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
         href="https://fonts.googleapis.com/css2?family=Anton&family=Bebas+Neue&family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
         rel="stylesheet" />
 
-    <!-- Iconos -->
+    <!-- Iconos Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
     <!-- Estilos -->
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="icon" href="images/favicon.png" type="image/png" />
+    <link rel="icon" href="images/favicon.png" type="image/png">
 </head>
 
 <body>
-
-    <!-- Encabezado -->
-    <header class="encabezado-principal">
+    <header id="inicio" class="encabezado-principal">
         <div class="encabezado-titulo">
-            <h1>Conocé nuestra escuela</h1>
-            <p class="subtitulo">Entrenamos en Club Alberti y Gimnasio Energía - La Plata</p>
+            <h1>Duarte Team</h1>
+            <p class="subtitulo">Centro Profesional de Taekwon-Do</p>
         </div>
-
         <div class="encabezado-logos">
-            <img src="images/ITF_Logo_New.png" alt="Logo ITF" />
-            <img src="images/logoClase2d.png" alt="Logo Duarte Team" />
-            <img src="images/FATI.png" alt="Logo FATI" />
+            <img src="images/ITF_Logo_New.png" alt="Logo ITF">
+            <img src="images/logoClase2d.png" alt="Logo Duarte Team">
+            <img src="images/FATI.png" alt="Logo FATI">
         </div>
     </header>
-
+    
+    <!-- Subtítulo específico para la galería -->
+    <section class="galeria-subtitulo">
+        <h2>Pasión en Acción</h2>
+        <p>¡Entrená con Duarte Team y forjá tu espíritu en La Plata!</p>
+    </section>
+    
     <!-- Navegación -->
     <nav>
         <ul class="nav-list">
@@ -52,44 +55,47 @@
         </ul>
     </nav>
 
-    <!-- Galería de la escuela -->
+    <!-- Imágenes de la escuela -->
     <main class="galeria">
-        <h2>CLASES EN NUESTRAS SEDES</h2>
-        <div class="contenedor-imagenes">
-            <a href="images/alberti1.jpg" target="_blank"><img src="images/alberti1.jpg"
-                    alt="Clase en Club Alberti" /></a>
-            <a href="images/alberti2.jpg" target="_blank"><img src="images/alberti2.jpg"
-                    alt="Entrada del Club Alberti" /></a>
-            <a href="images/alberti3.jpg" target="_blank"><img src="images/alberti3.jpg"
-                    alt="Práctica en Gimnasio Energía" /></a>
-            <a href="images/club-alberti.jpg" target="_blank"><img src="images/club-alberti.jpg"
-                    alt="Grupo de alumnos" /></a>
-            <a href="images/clasesAlberti.jpg" target="_blank"><img src="images/clasesAlberti.jpg"
-                    alt="Examen en Club Alberti" /></a>
-            <a href="images/gim_energia.jpg" target="_blank"><img src="images/gim_energia.jpg"
-                    alt="Taekwondo niños" /></a>
-            <a href="images/examen.jpg" target="_blank"><img src="images/examen.jpg"
-                    alt="Instructor guiando clase" /></a>
-            <a href="images/alberti2.jpg" target="_blank"><img src="images/alberti2.jpg"
-                    alt="Entrenamiento técnico" /></a>
+        <div class="galeria-contenedor">
+            <img src="images/imagen2.jpg" alt="Clase en Club Alberti">
+            <img src="images/imagen3.jpg" alt="Entrada del Club Alberti">
+            <img src="images/imagen4.jpg" alt="Práctica en Gimnasio Energía">
+            <img src="images/imagen5.jpg" alt="Grupo de alumnos">
+            <img src="images/imagen6.jpg" alt="Examen en Club Alberti">
+            <img src="images/imagen7.jpg" alt="Taekwondo niños">
+            <img src="images/IMG_20231001_132529_536.jpg" alt="Instructor guiando clase">
+            <img src="images/IMG_20240305_191314.jpg" alt="Entrenamiento técnico">
+            <img src="images/IMG-20221023-WA0016.jpg" alt="Competencia de Taekwondo">
+            <img src="images/IMG-20231210-WA0017.jpg" alt="Clase de Taekwondo en acción">
+            <img src="images/IMG-20231210-WA0011.jpg" alt="Niños practicando Taekwondo">
+            <img src="images/IMG-20231210-WA0010.jpg" alt="Instructor corrigiendo técnica">
+            <img src="images/IMG-20231210-WA0007.jpg" alt="Clase de Taekwondo en grupo">
+            <img src="images/IMG-20230919-WA0003.jpg" alt="Entrenamiento de Taekwondo en pareja">
+            <img src="images/IMG-20221023-WA0016.jpg" alt="Clase de Taekwondo en Club Alberti">
+            <img src="images/masterClas1.jpg" alt="Niños entrenando Taekwondo">
+            <img src="images/masterClas2.jpg" alt="Instructor de Taekwondo con alumnos">
         </div>
     </main>
 
-    <!-- Footer -->
+    <!-- Pie de página -->
     <footer>
         <ul class="footer-list">
             <li>© 2025 Duarte Team - Todos los derechos reservados.</li>
             <li>
                 Seguinos en
-                <a href="https://www.facebook.com/duarteTeam/" target="_blank"><i class="fab fa-facebook"></i></a>
-                <a href="https://www.instagram.com/darioduartetkd/" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.facebook.com/duarteTeam/" target="_blank" rel="noopener noreferrer"><i
+                        class="fab fa-facebook"></i></a>
+                <a href="https://www.instagram.com/darioduartetkd/" target="_blank" rel="noopener noreferrer"><i
+                        class="fab fa-instagram"></i></a>
             </li>
             <li><a href="index.html">Volver al inicio</a></li>
         </ul>
     </footer>
 
-    <!-- WhatsApp -->
-    <a href="https://wa.me/message/H5LF4KJLEY67E1" class="whatsapp-fixed" target="_blank" title="Chatear por WhatsApp">
+    <!-- Botón flotante de WhatsApp -->
+    <a href="https://wa.me/message/H5LF4KJLEY67E1" class="whatsapp-fixed" target="_blank" title="Chatear por WhatsApp"
+        rel="noopener noreferrer">
         <i class="fab fa-whatsapp"></i>
     </a>
 </body>
