Cambios antes de la pre-entrega

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
     <nav>
         <ul class="nav-list">
             <li><a href="index.html">Inicio</a></li>
-            <li><a href="about.html" aria-current="page">Sobre Nosotros</a></li>
+            <li><a href="about.html" aria-current="page">Nosotros</a></li>
             <li><a href="index.html#nuestras-sedes">Sedes</a></li>
             <li><a href="index.html#mapa-sedes">Mapa</a></li>
             <li><a href="index.html#fetra-taekwondo">Federación</a></li>
