--- a/nuestra-escuela.html
+++ b/nuestra-escuela.html
@@ -45,11 +45,12 @@
     </section>
     <!-- <h1>Conocé nuestra escuela</h1>
         <p>Entrenamos en Club Alberti y Gimnasio Energía - La Plata</p> -->
+
 <!-- Navegación -->
-<nav>
+<nav class="barra-navegacion">
     <ul class="nav-list">
         <li><a href="index.html">Inicio</a></li>
-        <li><a href="about.html" aria-current="page">Sobre Nosotros</a></li>
+        <li><a href="about.html" aria-current="page">Nosotros</a></li>
         <li><a href="index.html#nuestras-sedes">Sedes</a></li>
         <li><a href="index.html#mapa-sedes">Mapa</a></li>
         <li><a href="index.html#fetra-taekwondo">Federación</a></li>
@@ -57,6 +58,7 @@
         <li><a href="galeria.html">Galería</a></li>
     </ul>
 </nav>
+
     <main class="galeria">
         <div class="galeria-contenedor">
             <img src="images/alberti1.jpg" alt="Clase en Club Alberti">
