--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
     <nav>
         <ul class="nav-list">
             <li><a href="index.html">Inicio</a></li>
-            <li><a href="about.html">Sobre Nosotros</a></li>
+            <li><a href="about.html">Nosotros</a></li>
             <li><a href="index.html#nuestras-sedes">Sedes</a></li>
             <li><a href="index.html#mapa-sedes">Mapa</a></li>
 
