--- a/galeria.html
+++ b/galeria.html
@@ -42,18 +42,19 @@
         <p>¡Entrená con Duarte Team y forjá tu espíritu en La Plata!</p>
     </section>
     
-    <!-- Navegación -->
-    <nav>
-        <ul class="nav-list">
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="about.html">Sobre Nosotros</a></li>
-            <li><a href="index.html#nuestras-sedes">Sedes</a></li>
-            <li><a href="index.html#mapa-sedes">Mapa</a></li>
-            <li><a href="index.html#fetra-taekwondo">Federación</a></li>
-            <li><a href="contact.html">Contacto</a></li>
-            <li><a href="galeria.html">Galería</a></li>
-        </ul>
-    </nav>
+<!-- Navegación -->
+<nav class="barra-navegacion">
+    <ul class="nav-list">
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="about.html" aria-current="page">Nosotros</a></li>
+        <li><a href="index.html#nuestras-sedes">Sedes</a></li>
+        <li><a href="index.html#mapa-sedes">Mapa</a></li>
+        <li><a href="index.html#fetra-taekwondo">Federación</a></li>
+        <li><a href="contact.html">Contacto</a></li>
+        <li><a href="galeria.html">Galería</a></li>
+    </ul>
+</nav>
+
 
     <!-- Imágenes de la escuela -->
     <main class="galeria">
