--- a/index.html
+++ b/index.html
@@ -30,17 +30,19 @@
         </div>
     </header>
 
-    <nav aria-label="Navegación principal">
+    <!-- Navegación -->
+    <nav class="barra-navegacion">
         <ul class="nav-list">
-            <li><a href="index.html" aria-current="page">Inicio</a></li>
-            <li><a href="about.html">Sobre Nosotros</a></li>
-            <li><a href="#nuestras-sedes">Sedes</a></li>
-            <li><a href="#mapa-sedes">Mapa</a></li>
-            <li><a href="#fetra-taekwondo">Federación</a></li>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="about.html" aria-current="page">Nosotros</a></li>
+            <li><a href="index.html#nuestras-sedes">Sedes</a></li>
+            <li><a href="index.html#mapa-sedes">Mapa</a></li>
+            <li><a href="index.html#fetra-taekwondo">Federación</a></li>
             <li><a href="contact.html">Contacto</a></li>
             <li><a href="galeria.html">Galería</a></li>
         </ul>
     </nav>
+
 
     <main>
         <section class="hero" role="region" aria-label="Sección principal">
