Cambios antes de la entrega final

--- a/nuestra-escuela.html
+++ b/nuestra-escuela.html
@@ -58,20 +58,50 @@
         <li><a href="galeria.html">Galería</a></li>
     </ul>
 </nav>
-
+<!-- Galería con efecto modal
+ <main class="galeria">
+    <div class="galeria-contenedor">
+        <a href="#img1"><img src="images/alberti1.jpg" alt="Clase en Club Alberti"></a>
+        <a href="#img2"><img src="images/alberti2.jpg" alt="Entrada del Club Alberti"></a>
+        <a href="#img3"><img src="images/alberti3.jpg" alt="Práctica en Gimnasio Energía"></a>
+        <a href="#img4"><img src="images/club-alberti.jpg" alt="Grupo de alumnos"></a>
+        <a href="#img5"><img src="images/clasesAlberti.jpg" alt="Examen en Club Alberti"></a>
+        <a href="#img6"><img src="images/gim_energia.jpg" alt="Taekwondo niños"></a>
+        <a href="#img7"><img src="images/examen.jpg" alt="Instructor guiando clase"></a>
+        <a href="#img8"><img src="images/alberti9.jpg" alt="Entrenamiento técnico"></a>
+    </div>
+</main>
+ -->
     <main class="galeria">
+        <!-- Miniaturas con enlaces al modal 
+      <a href="#img1"><img src="images/imagen2.jpg" alt="Clase en Club Alberti"></a>
+      <a href="#img2"><img src="images/imagen3.jpg" alt="Entrada del Club Alberti"></a>
+      <a href="#img3"><img src="images/imagen4.jpg" alt="Práctica en Gimnasio Energía"></a> 
+        -->
         <div class="galeria-contenedor">
-            <img src="images/alberti1.jpg" alt="Clase en Club Alberti">
-            <img src="images/alberti2.jpg" alt="Entrada del Club Alberti">
-            <img src="images/alberti3.jpg" alt="Práctica en Gimnasio Energía">
-            <img src="images/club-alberti.jpg" alt="Grupo de alumnos">
-            <img src="images/clasesAlberti.jpg" alt="Examen en Club Alberti">
-            <img src="images/gim_energia.jpg"Taekwondo niños">
-            <img src="images/examen.jpg" alt="Instructor guiando clase">
-            <img src="images/alberti2.jpg"Entrenamiento técnico">
+            <a href="#img1"><img src="images/alberti1.jpg" alt="Clase en Club Alberti"></a>
+            <a href="#img2"><img src="images/alberti2.jpg" alt="Entrada del Club Alberti"></a>
+            <a href="#img3"><img src="images/alberti3.jpg" alt="Práctica en Gimnasio Energía"></a>
+            <a href="#img4"><img src="images/club-alberti.jpg" alt="Grupo de alumnos"></a>
+            <a href="#img5"><img src="images/clasesAlberti.jpg" alt="Examen en Club Alberti"></a>
+            <a href="#img6"><img src="images/gim_energia.jpg" alt="Taekwondo niños"></a>
+            <a href="#img7"><img src="images/examen.jpg" alt="Instructor guiando clase"></a>
+            <a href="#img8"><img src="images/alberti9.jpg" alt="Entrenamiento técnico"></a>
         </div>
     </main>
 
+<!-- Modales
+ id="img1"><a href="#" class="cerrar">&times;</a><img src="images/imagen2.jpg" alt=""></div>
+<div class="modal" id="img2"><a href="#" class="cerrar">&times;</a><img src="images/imagen3.jpg" alt=""></div> -->
+<div class="modal" id="img1"><a href="#" class="cerrar">&times;</a><img src="images/alberti1.jpg" alt="Clase en Club Alberti"></div>
+<div class="modal" id="img2"><a href="#" class="cerrar">&times;</a><img src="images/alberti2.jpg" alt="Entrada del Club Alberti"></div>
+<div class="modal" id="img3"><a href="#" class="cerrar">&times;</a><img src="images/alberti3.jpg" alt="Práctica en Gimnasio Energía"></div>
+<div class="modal" id="img4"><a href="#" class="cerrar">&times;</a><img src="images/club-alberti.jpg" alt="Grupo de alumnos"></div>
+<div class="modal" id="img5"><a href="#" class="cerrar">&times;</a><img src="images/clasesAlberti.jpg" alt="Examen en Club Alberti"></div>
+<div class="modal" id="img6"><a href="#" class="cerrar">&times;</a><img src="images/gim_energia.jpg" alt="Taekwondo niños"></div>
+<div class="modal" id="img7"><a href="#" class="cerrar">&times;</a><img src="images/examen.jpg" alt="Instructor guiando clase"></div>
+<div class="modal" id="img8"><a href="#" class="cerrar">&times;</a><img src="images/alberti9.jpg" alt="Entrenamiento técnico"></div>
+</main>
 <!-- Pie de página -->
 <footer>
     <ul class="footer-list">
