--- a/galeria.html
+++ b/galeria.html
@@ -2,103 +2,122 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Latir del Taekwondo</title>
-    <meta name="description"
-        content="Conocé nuestra escuela de Taekwondo en La Plata. Entrenamos en Club Alberti y Gimnasio Energía con el Duarte Team.">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Latir del Taekwondo</title>
+  <meta name="description"
+    content="Conocé nuestra escuela de Taekwondo en La Plata. Entrenamos en Club Alberti y Gimnasio Energía con el Duarte Team.">
 
-    <!-- Google Fonts: Bebas Neue -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Anton&family=Bebas+Neue&family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
-        rel="stylesheet" />
+  <!-- Google Fonts: Bebas Neue -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Anton&family=Bebas+Neue&family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
+    rel="stylesheet" />
 
-    <!-- Iconos Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <!-- Iconos Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
-    <!-- Estilos -->
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="icon" href="images/favicon.png" type="image/png">
+  <!-- Estilos -->
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="icon" href="images/favicon.png" type="image/png">
 </head>
 
 <body>
-    <header id="inicio" class="encabezado-principal">
-        <div class="encabezado-titulo">
-            <h1>Duarte Team</h1>
-            <p class="subtitulo">Centro Profesional de Taekwon-Do</p>
-        </div>
-        <div class="encabezado-logos">
-            <img src="images/ITF_Logo_New.png" alt="Logo ITF">
-            <img src="images/logoClase2d.png" alt="Logo Duarte Team">
-            <img src="images/FATI.png" alt="Logo FATI">
-        </div>
-    </header>
-    
-    <!-- Subtítulo específico para la galería -->
-    <section class="galeria-subtitulo">
-        <h2>Pasión en Acción</h2>
-        <p>¡Entrená con Duarte Team y forjá tu espíritu en La Plata!</p>
-    </section>
-    
-<!-- Navegación -->
-<nav class="barra-navegacion">
+  <header id="inicio" class="encabezado-principal">
+    <div class="encabezado-titulo">
+      <h1>Duarte Team</h1>
+      <p class="subtitulo">Centro Profesional de Taekwon-Do</p>
+    </div>
+    <div class="encabezado-logos">
+      <img src="images/ITF_Logo_New.png" alt="Logo ITF">
+      <img src="images/logoClase2d.png" alt="Logo Duarte Team">
+      <img src="images/FATI.png" alt="Logo FATI">
+    </div>
+  </header>
+
+  <!-- Subtítulo específico para la galería -->
+  <section class="galeria-subtitulo">
+    <h2>Pasión en Acción</h2>
+    <p>¡Entrená con Duarte Team y forjá tu espíritu en La Plata!</p>
+  </section>
+
+  <!-- Navegación -->
+  <nav class="barra-navegacion">
     <ul class="nav-list">
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="about.html" aria-current="page">Nosotros</a></li>
-        <li><a href="index.html#nuestras-sedes">Sedes</a></li>
-        <li><a href="index.html#mapa-sedes">Mapa</a></li>
-        <li><a href="index.html#fetra-taekwondo">Federación</a></li>
-        <li><a href="contact.html">Contacto</a></li>
-        <li><a href="galeria.html">Galería</a></li>
+      <li><a href="index.html">Inicio</a></li>
+      <li><a href="about.html" aria-current="page">Nosotros</a></li>
+      <li><a href="index.html#nuestras-sedes">Sedes</a></li>
+      <li><a href="index.html#mapa-sedes">Mapa</a></li>
+      <li><a href="index.html#fetra-taekwondo">Federación</a></li>
+      <li><a href="contact.html">Contacto</a></li>
+      <li><a href="galeria.html">Galería</a></li>
     </ul>
-</nav>
+  </nav>
 
+  <!-- Galería con efecto modal -->
+  <main class="galeria">
+    <div class="galeria-contenedor">
+      <!-- Miniaturas con enlaces al modal -->
+      <a href="#img1"><img src="images/imagen2.jpg" alt="Clase en Club Alberti"></a>
+      <a href="#img2"><img src="images/imagen3.jpg" alt="Entrada del Club Alberti"></a>
+      <a href="#img3"><img src="images/imagen4.jpg" alt="Práctica en Gimnasio Energía"></a>
+      <a href="#img4"><img src="images/imagen5.jpg" alt="Grupo de alumnos"></a>
+      <a href="#img5"><img src="images/imagen6.jpg" alt="Examen en Club Alberti"></a>
+      <a href="#img6"><img src="images/imagen7.jpg" alt="Taekwondo niños"></a>
+      <a href="#img7"><img src="images/IMG_20231001_132529_536.jpg" alt="Instructor guiando clase"></a>
+      <a href="#img8"><img src="images/IMG_20240305_191314.jpg" alt="Entrenamiento técnico"></a>
+      <a href="#img9"><img src="images/IMG-20221023-WA0016.jpg" alt="Competencia de Taekwondo"></a>
+      <a href="#img10"><img src="images/IMG-20231210-WA0017.jpg" alt="Clase de Taekwondo en acción"></a>
+      <a href="#img11"><img src="images/IMG-20231210-WA0011.jpg" alt="Niños practicando Taekwondo"></a>
+      <a href="#img12"><img src="images/IMG-20231210-WA0010.jpg" alt="Instructor corrigiendo técnica"></a>
+      <a href="#img13"><img src="images/IMG-20231210-WA0007.jpg" alt="Clase de Taekwondo en grupo"></a>
+      <a href="#img14"><img src="images/IMG-20230919-WA0003.jpg" alt="Entrenamiento en pareja"></a>
+      <a href="#img15"><img src="images/IMG-20221023-WA0016.jpg" alt="Clase en Club Alberti"></a>
+      <a href="#img16"><img src="images/masterClas1.jpg" alt="Niños entrenando"></a>
+      <a href="#img17"><img src="images/masterClas2.jpg" alt="Instructor con alumnos"></a>
 
-    <!-- Imágenes de la escuela -->
-    <main class="galeria">
-        <div class="galeria-contenedor">
-            <img src="images/imagen2.jpg" alt="Clase en Club Alberti">
-            <img src="images/imagen3.jpg" alt="Entrada del Club Alberti">
-            <img src="images/imagen4.jpg" alt="Práctica en Gimnasio Energía">
-            <img src="images/imagen5.jpg" alt="Grupo de alumnos">
-            <img src="images/imagen6.jpg" alt="Examen en Club Alberti">
-            <img src="images/imagen7.jpg" alt="Taekwondo niños">
-            <img src="images/IMG_20231001_132529_536.jpg" alt="Instructor guiando clase">
-            <img src="images/IMG_20240305_191314.jpg" alt="Entrenamiento técnico">
-            <img src="images/IMG-20221023-WA0016.jpg" alt="Competencia de Taekwondo">
-            <img src="images/IMG-20231210-WA0017.jpg" alt="Clase de Taekwondo en acción">
-            <img src="images/IMG-20231210-WA0011.jpg" alt="Niños practicando Taekwondo">
-            <img src="images/IMG-20231210-WA0010.jpg" alt="Instructor corrigiendo técnica">
-            <img src="images/IMG-20231210-WA0007.jpg" alt="Clase de Taekwondo en grupo">
-            <img src="images/IMG-20230919-WA0003.jpg" alt="Entrenamiento de Taekwondo en pareja">
-            <img src="images/IMG-20221023-WA0016.jpg" alt="Clase de Taekwondo en Club Alberti">
-            <img src="images/masterClas1.jpg" alt="Niños entrenando Taekwondo">
-            <img src="images/masterClas2.jpg" alt="Instructor de Taekwondo con alumnos">
-        </div>
-    </main>
+      <!-- Modales -->
+      <div class="modal" id="img1"><a href="#" class="cerrar">&times;</a><img src="images/imagen2.jpg" alt=""></div>
+      <div class="modal" id="img2"><a href="#" class="cerrar">&times;</a><img src="images/imagen3.jpg" alt=""></div>
+      <div class="modal" id="img3"><a href="#" class="cerrar">&times;</a><img src="images/imagen4.jpg" alt=""></div>
+      <div class="modal" id="img4"><a href="#" class="cerrar">&times;</a><img src="images/imagen5.jpg" alt=""></div>
+      <div class="modal" id="img5"><a href="#" class="cerrar">&times;</a><img src="images/imagen6.jpg" alt=""></div>
+      <div class="modal" id="img6"><a href="#" class="cerrar">&times;</a><img src="images/imagen7.jpg" alt=""></div>
+      <div class="modal" id="img7"><a href="#" class="cerrar">&times;</a><img src="images/IMG_20231001_132529_536.jpg" alt=""></div>
+      <div class="modal" id="img8"><a href="#" class="cerrar">&times;</a><img src="images/IMG_20240305_191314.jpg" alt=""></div>
+      <div class="modal" id="img9"><a href="#" class="cerrar">&times;</a><img src="images/IMG-20221023-WA0016.jpg" alt=""></div>
+      <div class="modal" id="img10"><a href="#" class="cerrar">&times;</a><img src="images/IMG-20231210-WA0017.jpg" alt=""></div>
+      <div class="modal" id="img11"><a href="#" class="cerrar">&times;</a><img src="images/IMG-20231210-WA0011.jpg" alt=""></div>
+      <div class="modal" id="img12"><a href="#" class="cerrar">&times;</a><img src="images/IMG-20231210-WA0010.jpg" alt=""></div>
+      <div class="modal" id="img13"><a href="#" class="cerrar">&times;</a><img src="images/IMG-20231210-WA0007.jpg" alt=""></div>
+      <div class="modal" id="img14"><a href="#" class="cerrar">&times;</a><img src="images/IMG-20230919-WA0003.jpg" alt=""></div>
+      <div class="modal" id="img15"><a href="#" class="cerrar">&times;</a><img src="images/IMG-20221023-WA0016.jpg" alt=""></div>
+      <div class="modal" id="img16"><a href="#" class="cerrar">&times;</a><img src="images/masterClas1.jpg" alt=""></div>
+      <div class="modal" id="img17"><a href="#" class="cerrar">&times;</a><img src="images/masterClas2.jpg" alt=""></div>
+    </div>
+  </main>
 
-    <!-- Pie de página -->
-    <footer>
-        <ul class="footer-list">
-            <li>© 2025 Duarte Team - Todos los derechos reservados.</li>
-            <li>
-                Seguinos en
-                <a href="https://www.facebook.com/duarteTeam/" target="_blank" rel="noopener noreferrer"><i
-                        class="fab fa-facebook"></i></a>
-                <a href="https://www.instagram.com/darioduartetkd/" target="_blank" rel="noopener noreferrer"><i
-                        class="fab fa-instagram"></i></a>
-            </li>
-            <li><a href="index.html">Volver al inicio</a></li>
-        </ul>
-    </footer>
+  <!-- Pie de página -->
+  <footer>
+    <ul class="footer-list">
+      <li>© 2025 Duarte Team - Todos los derechos reservados.</li>
+      <li>
+        Seguinos en
+        <a href="https://www.facebook.com/duarteTeam/" target="_blank" rel="noopener noreferrer"><i
+            class="fab fa-facebook"></i></a>
+        <a href="https://www.instagram.com/darioduartetkd/" target="_blank" rel="noopener noreferrer"><i
+            class="fab fa-instagram"></i></a>
+      </li>
+      <li><a href="index.html">Volver al inicio</a></li>
+    </ul>
+  </footer>
 
-    <!-- Botón flotante de WhatsApp -->
-    <a href="https://wa.me/message/H5LF4KJLEY67E1" class="whatsapp-fixed" target="_blank" title="Chatear por WhatsApp"
-        rel="noopener noreferrer">
-        <i class="fab fa-whatsapp"></i>
-    </a>
+  <!-- Botón flotante de WhatsApp -->
+  <a href="https://wa.me/message/H5LF4KJLEY67E1" class="whatsapp-fixed" target="_blank" title="Chatear por WhatsApp"
+    rel="noopener noreferrer">
+    <i class="fab fa-whatsapp"></i>
+  </a>
 </body>
 
 </html>
